divided into classes

--- a/TelegramBot/appsettings.json
+++ b/TelegramBot/appsettings.json
@@ -1,11 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
   "Telegram": {
-    "Token": "YOUR_BOT_TOKEN"
+    "Token": "<YOUR TOKEN HERE>",
+    "AdminId": "<UOUR TELEGRAM ID>"
+  },
+
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Port=5432;Database=telegram_bot_db;Username=postgres;Password=postgres"
   }
 }
