small refactor and fixes

--- a/TelegramBot/appsettings.json
+++ b/TelegramBot/appsettings.json
@@ -7,10 +7,10 @@
   },
   "Telegram": {
     "Token": "<YOUR TOKEN HERE>",
-    "AdminId": "<UOUR TELEGRAM ID>"
+    "AdminId": "<Your TELEGRAM ID>"
   },
 
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432;Database=telegram_bot_db;Username=postgres;Password=postgres"
+    "PostgresSQL": "Host=localhost;Port=5432;Database=telegram_bot_db;Username=postgres;Password=postgres"
   }
 }
