--- a/TelegramBot/Dockerfile
+++ b/TelegramBot/Dockerfile
@@ -1,7 +1,7 @@
 # См. статью по ссылке https://aka.ms/customizecontainer, чтобы узнать как настроить контейнер отладки и как Visual Studio использует этот Dockerfile для создания образов для ускорения отладки.
 
 # Этот этап используется при запуске из VS в быстром режиме (по умолчанию для конфигурации отладки)
-FROM mcr.microsoft.com/dotnet/runtime:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
 
@@ -11,6 +11,8 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["TelegramBot/TelegramBot.csproj", "TelegramBot/"]
+COPY ["Hors/Hors.csproj", "Hors/"]
+
 RUN dotnet restore "./TelegramBot/TelegramBot.csproj"
 COPY . .
 WORKDIR "/src/TelegramBot"
