--- a/TelegramBot/TelegramBot.csproj
+++ b/TelegramBot/TelegramBot.csproj
@@ -16,7 +16,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Humanizer" Version="3.0.0-beta.54" />
+    <PackageReference Include="Humanizer.Core.ru" Version="3.0.0-beta.54" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
