--- a/TelegramBot/app/package.json
+++ b/TelegramBot/app/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "bsr-table": "^2.0.7",
+    "draft-js": "^0.11.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -41,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16"
   }
 }
