--- a/TelegramBot/TelegramBot.csproj
+++ b/TelegramBot/TelegramBot.csproj
@@ -11,9 +11,13 @@
 
   <ItemGroup>
     <Compile Remove="app\**" />
+    <Compile Remove="web\**" />
     <Content Remove="app\**" />
+    <Content Remove="web\**" />
     <EmbeddedResource Remove="app\**" />
+    <EmbeddedResource Remove="web\**" />
     <None Remove="app\**" />
+    <None Remove="web\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +36,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+    <PackageReference Include="ReverseMarkdown" Version="4.6.0" />
     <PackageReference Include="Telegram.Bot" Version="22.0.2" />
   </ItemGroup>
 
